// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSortItem > creates valid attribute sort 1`] = `
{
  "attributeSortItem": {
    "attributeIdentifier": "a_label.f_product.product.name",
    "direction": "asc",
  },
}
`;

exports[`createSortItem > creates valid measure sort item when no column attributes 1`] = `
{
  "measureSortItem": {
    "direction": "asc",
    "locators": [
      {
        "measureLocatorItem": {
          "measureIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
        },
      },
    ],
  },
}
`;

exports[`createSortItem > creates valid measure sort item when single column attribute 1`] = `
{
  "measureSortItem": {
    "direction": "desc",
    "locators": [
      {
        "attributeLocatorItem": {
          "attributeIdentifier": "a_f_owner.region_id",
          "element": "East Coast",
        },
      },
      {
        "measureLocatorItem": {
          "measureIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
        },
      },
    ],
  },
}
`;

exports[`createSortItem > creates valid measure sort item when two attributes 1`] = `
{
  "measureSortItem": {
    "direction": "desc",
    "locators": [
      {
        "attributeLocatorItem": {
          "attributeIdentifier": "a_attr.f_stage.stagename",
          "element": "Interest",
        },
      },
      {
        "attributeLocatorItem": {
          "attributeIdentifier": "a_f_owner.region_id",
          "element": "East Coast",
        },
      },
      {
        "measureLocatorItem": {
          "measureIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
        },
      },
    ],
  },
}
`;
